frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qanda-frontend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: qanda-frontend
  template:
    metadata:
      labels:
        app: qanda-frontend
    spec:
      containers:
      - name: qanda-frontend
        image: sujiththirumalaisamy/qanda-frontend:dc44d3bfe348221a10621df1f21feb65aa118eae
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: qanda-frontend
spec:
  selector:
    app: qanda-frontend
  ports:
  - port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-qanda-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - solana.trim.ink
    secretName: qanda-frontend-tls
  rules:
  - host: solana.trim.ink
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qanda-frontend
            port:
              number: 80
