ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.solana.trim.ink
      secretName: aanda-backend-tls
  rules:
    - host: api.solana.trim.ink
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qanda-chatbot-server
                port:
                  number: 80
