server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qanda-chatbot-server
spec:
  replicas: 4
  selector:
    matchLabels:
      app: qanda-chatbot-server
  template:
    metadata:
      labels:
        app: qanda-chatbot-server
    spec:
      containers:
      - name: qanda-server
        image: sujiththirumalaisamy/qanda-backend:97e83c3e960709037fff6bf194c9245515e098fc
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        volumeMounts:
          - name: secret
            mountPath: /usr/src/app/.env
            subPath: .env
      volumes:
        - name: secret
          secret:
            secretName: qanda-chatbot-secrets
            items:
              - key: .env
                path: .env
---
apiVersion: v1
kind: Service
metadata:
  name: qanda-chatbot-server
spec:
  selector:
    app: qanda-chatbot-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-qanda-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.solana.trim.ink
      secretName: qanda-backend-tls
  rules:
    - host: api.solana.trim.ink
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qanda-chatbot-server
                port:
                  number: 80
